<resources>
  <string name="app_name">InfoAppv3</string>
  <string name="title_activity_nav">NavActivity</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_news">News</string>
  <string name="menu_camp">Campus</string>
  <string name="menu_institute">Institute</string>
  <string name="menu_chat">Chat</string>
  <string name="menu_options">Einstellungen</string>
  <string name="menu_feedback">Feedback</string>
  <string name="menu_imprint">Impressum</string>

  <string name="hello_blank_fragment">Hello blank fragment</string>

  <string name="ins_header">Über das Institut</string>
  <string name="ins_header2">Aktuelles</string>

</resources>